# webgraphics

./: .gitignore  Cargo.toml  index.js
src/: app_state.rs  common_funcs.rs  coordinates.rs  gl_setup.rs  lib.rs  matrix_equations.rs  webgl_compiler.rs
src/objects/: game_box.rs  matrix_translation.rs  mod.rs  position.rs  vertices_rect.rs
src/programs/: box_2d.rs  color_2d.rs  game_box.rs  mod.rs
src/shaders/fragment/: mod.rs
src/shaders/vertex/: mod.rs
