[package]
name = "rust-3d-demo"
version = "0.1.0"
authors = ["Doug Milford"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.19"
lazy_static = "1.3.0"
nalgebra = "0.29.0"
wasm-bindgen = { version = "0.2.77", features = ["serde-serialize"] }
serde_json = "1.0.59"
serde_derive = "1.0.131"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }


[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'MouseEvent',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
]